--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,9 @@
 
 @import "blocks/collapse";
 @import "blocks/tabs";
+@import "blocks/modal";
+@import "blocks/btn";
+@import "blocks/form";
 
 // Plugins
 // --------------------------------------------------------------------------
