--- a/sass/blocks/_btn.scss
+++ b/sass/blocks/_btn.scss
@@ -1,113 +1,173 @@
 @charset "UTF-8";
 
 /* ============================================================================
-   @group Btn
+   Compose 3 element button
 ============================================================================ */
 
 @import "config";
 @import "helpers/mixins";
 
-/* Btn behavior
+
+/* 3 elements button generic classes
 ---------------------------------------------------------------------------- */
 
+.btn-3el {
+	display:inline-block;
+	padding: 0 7px;
+	vertical-align: text-bottom;
+	text-decoration: none;
+	white-space: nowrap;
 
-/* Btn styles
----------------------------------------------------------------------------- */
+	.ie6-7 & {
+		display:inline;
+		zoom: 1;
+	}
 
-// .btn {
-// 		display:inline-block;
-// 		padding: 0 7px;
-// 		vertical-align: text-bottom;
+	input {
+		padding: 0;
+		margin: 0;
+		background: transparent;
+		border: none !important;
+	}
 
-// 		.ie6-7 & {
-// 			display:inline;
-// 			zoom: 1;
-// 		}
+	&:hover,
+	&:focus {
+		.btn-3el__l-s,
+		.btn-3el__mid,
+		.btn-3el__r-s {
+			opacity: .92;
+			-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=92)";
+			filter: alpha(opacity = 92);
+			cursor: pointer;
+		}
+	}
+}
 
-// 	.b-left-side,
-// 	.b-middle,
-// 	.b-right-side {
-// 		display:inline-block;
-// 		float:left;
-// 		vertical-align: top;
-// 		background-repeat: repeat-y;
-// 		.ie6-7 & {
-// 		 display:inline;
-// 		 zoom: 1;
-// 		}
-// 	}
+.btn-3el__l-s,
+.btn-3el__mid,
+.btn-3el__r-s {
+	display:inline-block;
+	vertical-align: top;
+	float: left;
+	background-repeat: repeat-x;
 
-// 	input {
-// 		padding: 0;
-// 		margin: 0;
-// 		background: transparent;
-// 		border: none;
-// 	}
+	.ie6-7 & {
+		display:inline;
+		zoom: 1;
+	}
+}
 
-// 	.b-left-side,
-// 	.b-right-side {
-// 		width: 7px;
-// 	}
+.btn-3el__l-s,
+.btn-3el__r-s {
+	width: 7px;
+}
 
-// 	.b-middle {
-// 		background-position: center top;
-// 	}
+.btn-3el__mid {
+	background-position: left bottom !important; // input bg fix
+}
 
-// 	.b-left-side {
-// 		background-position: left top;
-// 	}
+.btn-3el__l-s {
+	background-position: left top;
+	margin-left: -4px;
+}
 
-// 	.b-right-side {
-// 		background-position: right top;
-// 	}
+.btn-3el__r-s {
+	background-position: right top;
+	margin-right: -4px;
+}
 
-// 	&:hover {
-// 		span {
-// 			opacity: .92;
-// 			-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=92)";
-// 			filter: alpha(opacity = 92);
-// 		}
-// 	}
+/* @end */
 
-// }
 
-// .btn-prim {
-// 	 height: 31px;
-// 	 line-height: 31px;
-// 	 font-size: 18px;
+/* @group 3 element button Primary button
+--------------------------------------------------------------------------- */
 
-// 	.b-left-side,
-// 	.b-middle,
-// 	.b-right-side {
-// 		background-image: url(../images/button-green-medium.png);
-// 		height: 31px;
-// 		line-height: 31px;
-// 	}
+.btn-3el_prim {
+	$btn-3elHeight: 40px;
 
-// 	.b-middle {
-// 		padding: 0 .4em;
-// 	}
+	height: $btn-3elHeight;
+	line-height: $btn-3elHeight;
+	font-size: 18px;
 
-// }
+	.btn-3el__l-s,
+	.btn-3el__mid,
+	.btn-3el__r-s {
+		height: $btn-3elHeight;
+		line-height: $btn-3elHeight;
+	}
 
-// .btn-sec {
-// 	 height: 18px;
-// 	 line-height: 18px;
-// 	 font-size: 1em;
+	.btn-3el__mid {
+		padding: 0 .4em;
+	}
+}
 
-// 	.b-left-side,
-// 	.b-middle,
-// 	.b-right-side {
-// 		background-image: url(../images/button-green-medium.png);
-// 		height: 18px;
-// 		line-height: 18px;
-// 	}
+.btn-3el_prim_green {
+	$color: #fff;
+	$hcolor: #fff;
 
-// 	.b-middle {
-// 		padding: 0 .4em;
-// 	}
+	color: $color;
 
-// }
+	&:hover,
+	&:focus {
+		color: $hcolor;
+	}
 
+	input {
+		color: $color;
+	}
+
+	.btn-3el__l-s,
+	.btn-3el__mid,
+	.btn-3el__r-s {
+		background-image: url(../images/compose-btn-3el/button-primary-green.gif);
+	}
+}
+
+/* @end */
+
+
+/* @group 3 element button Secondary button
+--------------------------------------------------------------------------- */
+
+.btn-3el_sec {
+	$btn-3elHeight: 30px;
+
+	height: $btn-3elHeight;
+	line-height: $btn-3elHeight;
+	font-size: 16px;
+
+	.btn-3el__l-s,
+	.btn-3el__mid,
+	.btn-3el__r-s {
+		height: $btn-3elHeight;
+		line-height: $btn-3elHeight;
+	}
+
+	.btn-3el__mid {
+		padding: 0 .4em;
+	}
+}
+
+.btn-3el_sec_green {
+	$color: #fff;
+	$hcolor: #fff;
+
+	color: $color;
+
+	&:hover,
+	&:focus {
+		color: $hcolor;
+	}
+
+	input {
+		color: $color;
+	}
+
+	.btn-3el__l-s,
+	.btn-3el__mid,
+	.btn-3el__r-s {
+		background-image: url(../images/compose-btn-3el/button-secondary-green.gif);
+	}
+}
 
 /* @end */
