--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -184,3 +184,44 @@ input::-moz-focus-inner {
 
 
 /* @end */
+
+
+/* @group Form Support
+	-------------------------------------------------------------------------- */
+
+.form {}
+
+.form__row {
+	@extend .i-clfx;
+	padding: .4em 0;
+}
+
+.form__item {
+	float:left;
+	padding: 0 .4em 0 0;
+}
+
+/* @end */
+
+// /* ============================================================================
+// 	 input styles
+// ============================================================================= */
+
+// .input-container {
+// 	 display: inline-block;
+// 	 padding: .2em .2em .1em;
+// 	 /* background: url(../images/input.png) 0 0 no-repeat; */
+// 	 vertical-align: bottom;
+
+// 	 .ie6-7 {
+// 		 display:inline;
+// 		 zoom: 1;
+// 	 }
+
+// 	 input {
+// 		 padding: 0 .4em;
+// 		 margin: 0;
+// 		 background: transparent;
+// 		 border: none;
+// 	 }
+// }
