--- a/sass/blocks/_modal.scss
+++ b/sass/blocks/_modal.scss
@@ -44,7 +44,9 @@
 /* Modal styles
 ---------------------------------------------------------------------------- */
 
-.modal {}
+.modal {
+	display: none;
+}
 
 .modal__bg {
 	background: rgba(0,0,0,0.4);
