--- a/sass/includes/_b.scss
+++ b/sass/includes/_b.scss
@@ -16,29 +16,6 @@
 		outline: 1px dashed #ccc;
 }
 
-// /* ============================================================================
-// 	 input styles
-// ============================================================================= */
-
-// .input-container {
-// 	 display: inline-block;
-// 	 padding: .2em .2em .1em;
-// 	 /* background: url(../images/input.png) 0 0 no-repeat; */
-// 	 vertical-align: bottom;
-
-// 	 .ie6-7 {
-// 		 display:inline;
-// 		 zoom: 1;
-// 	 }
-
-// 	 input {
-// 		 padding: 0 .4em;
-// 		 margin: 0;
-// 		 background: transparent;
-// 		 border: none;
-// 	 }
-// }
-
 /* ============================================================================
 		Stylize text
 ============================================================================= */
@@ -51,6 +28,8 @@
 		font-style: italic;
 	}
 }
+
+// Color
 
 .i-emph_c {
 	color: $accentColor;
@@ -67,6 +46,8 @@
 .i-emph_c_ligh {
 	color: lighten($baseColor, 20%);
 }
+
+// Font size
 
 .i-emph_fz_sm {
 	font-size: .8em;
@@ -91,6 +72,32 @@
 
 .i-emph_sans {
 	font-family: $sans;
+}
+
+.i-emph_fz_20 {
+	font-size: 20px;
+}
+
+.i-emph_fz_30 {
+	font-size: 30px;
+}
+
+// Spacesers
+
+.i-spacer {
+	display: block;
+}
+
+.i-spacer-10 {
+	padding-bottom: 10px;
+}
+
+.i-spacer-20 {
+	padding-bottom: 20px;
+}
+
+.i-spacer-30 {
+	padding-bottom: 30px;
 }
 
 .alt-title,
