--- a/sass/plugins/_fancybox.scss
+++ b/sass/plugins/_fancybox.scss
@@ -38,7 +38,7 @@
   left: 0;
   width: 40px;
   height: 480px;
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
 }
 
 #fancybox-overlay {
@@ -102,7 +102,7 @@
   right: -15px;
   width: 30px;
   height: 30px;
-  background: transparent url('../images/fancybox/fancybox.png') -40px 0px;
+  background: transparent url('../images/plugins/fancybox/fancybox.png') -40px 0px;
   cursor: pointer;
   z-index: 1103;
   display: none;
@@ -140,7 +140,7 @@
   width: 35%;
   cursor: pointer;
   outline: none;
-  background: transparent url('../images/fancybox/blank.gif');
+  background: transparent url('../images/plugins/fancybox/blank.gif');
   z-index: 1102;
   display: none;
 }
@@ -166,12 +166,12 @@
 }
 
 #fancybox-left-ico {
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -30px;
 }
 
 #fancybox-right-ico {
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -60px;
 }
 
@@ -202,13 +202,13 @@
   top: -20px;
   left: 0;
   width: 100%;
-  background-image: url('../images/fancybox/fancybox-x.png');
+  background-image: url('../images/plugins/fancybox/fancybox-x.png');
 }
 
 #fancybox-bg-ne {
   top: -20px;
   right: -20px;
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -162px;
 }
 
@@ -216,14 +216,14 @@
   top: 0;
   right: -20px;
   height: 100%;
-  background-image: url('../images/fancybox/fancybox-y.png');
+  background-image: url('../images/plugins/fancybox/fancybox-y.png');
   background-position: -20px 0px;
 }
 
 #fancybox-bg-se {
   bottom: -20px;
   right: -20px;
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -182px;
 }
 
@@ -231,14 +231,14 @@
   bottom: -20px;
   left: 0;
   width: 100%;
-  background-image: url('../images/fancybox/fancybox-x.png');
+  background-image: url('../images/plugins/fancybox/fancybox-x.png');
   background-position: 0px -20px;
 }
 
 #fancybox-bg-sw {
   bottom: -20px;
   left: -20px;
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -142px;
 }
 
@@ -246,13 +246,13 @@
   top: 0;
   left: -20px;
   height: 100%;
-  background-image: url('../images/fancybox/fancybox-y.png');
+  background-image: url('../images/plugins/fancybox/fancybox-y.png');
 }
 
 #fancybox-bg-nw {
   top: -20px;
   left: -20px;
-  background-image: url('../images/fancybox/fancybox.png');
+  background-image: url('../images/plugins/fancybox/fancybox.png');
   background-position: -40px -122px;
 }
 
@@ -285,7 +285,7 @@
 
 #fancybox-title-over {
   padding: 10px;
-  background-image: url('../images/fancybox/fancy_title_over.png');
+  background-image: url('../images/plugins/fancybox/fancy_title_over.png');
   display: block;
 }
 
@@ -309,7 +309,7 @@
 
 #fancybox-title-float-left {
   padding: 0 0 0 15px;
-  background: url('../images/fancybox/fancybox.png') -40px -90px no-repeat;
+  background: url('../images/plugins/fancybox/fancybox.png') -40px -90px no-repeat;
 }
 
 #fancybox-title-float-main {
@@ -317,12 +317,12 @@
   line-height: 29px;
   font-weight: bold;
   padding: 0 0 3px 0;
-  background: url('../images/fancybox/fancybox-x.png') 0px -40px;
+  background: url('../images/plugins/fancybox/fancybox-x.png') 0px -40px;
 }
 
 #fancybox-title-float-right {
   padding: 0 0 0 15px;
-  background: url('../images/fancybox/fancybox.png') -55px -90px no-repeat;
+  background: url('../images/plugins/fancybox/fancybox.png') -55px -90px no-repeat;
 }
 
 /* IE6 */
