--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/btn";
 @import "blocks/menu-horiz";
 @import "blocks/form";
+@import "blocks/table";
 
 // Plugins
 // --------------------------------------------------------------------------
