--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,19 @@ blockquote:before, blockquote:after, q:before, q:after {
   font-style: normal;
 }
 
+body {
+  font-size: 14px;
+  line-height: 1.286em;
+  font-family: Arial, FreeSans, sans-serif;
+  color: #434343;
+  background: white;
+  overflow-y: scroll;
+  margin: 0;
+}
+.ie6-7 body {
+  overflow-y: auto;
+}
+
 /* ============================================================================
 		1.1. Typography
 ============================================================================= */
@@ -167,64 +180,8 @@ dl dd {
 }
 
 /* @end */
-/* @group Tables
---------------------------------------------------------------------------- */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  border-width: 0;
-  width: 100%;
-  table-layout: fixed;
-  word-wrap: break-word;
-  empty-cells: hide;
-}
-
-caption {
-  font-size: 1.618em;
-  line-height: 1.589em;
-  margin-bottom: 0.795em;
-}
-
-td, th {
-  vertical-align: middle;
-  padding: 0 0.514em;
-  border: 1px solid #ccc;
-}
-thead td, thead th {
-  font-weight: bold;
-}
-
-tbody td[colspan] {
-  text-align: center;
-}
-tbody td[rowspan] {
-  vertical-align: middle;
-}
-tbody td[colspan="1"] {
-  text-align: left;
-}
-tbody td[rowspan="1"] {
-  vertical-align: top;
-}
-tbody td:empty {
-  border: none;
-}
-tbody tr:nth-of-type(odd) td {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-tfoot {
-  text-align: center;
-  font-size: .9em;
-  font-style: italic;
-}
-
-/* @end */
 /* ============================================================================
-		1.3. Forms
-============================================================================= */
-/* ============================================================================
-		1.4. Specific
+		1.4 Specific
 ============================================================================= */
 sup, sub {
   vertical-align: baseline;
@@ -260,33 +217,6 @@ u {
 
 figure {
   margin: 0;
-}
-
-/* ============================================================================
-		1.6 Embed content reset
-============================================================================= */
-#plusone table, #plusone td, #plusone th, #plusone tr,
-.YMaps-b-balloon-frame table,
-.YMaps-b-balloon-frame td,
-.YMaps-b-balloon-frame th,
-.YMaps-b-balloon-frame tr,
-#vkshare0 table,
-#vkshare0 td,
-#vkshare0 th,
-#vkshare0 tr,
-div.bx-core-dialog-content table,
-div.bx-core-dialog-content td,
-div.bx-core-dialog-content th,
-div.bx-core-dialog-content tr,
-div.bx-core-admin-dialog-content table,
-div.bx-core-admin-dialog-content td,
-div.bx-core-admin-dialog-content th,
-div.bx-core-admin-dialog-content tr {
-  margin: 0;
-  padding: 0;
-  border: none;
-  border-radius: none;
-  background: initial;
 }
 
 /* ============================================================================
@@ -357,19 +287,6 @@ ins {
 /* ============================================================================
 		PAGE LAYOUT
 ============================================================================= */
-body {
-  font-size: 14px;
-  line-height: 1.286em;
-  font-family: Arial, FreeSans, sans-serif;
-  color: #434343;
-  background: white;
-  overflow-y: scroll;
-  margin: 0;
-}
-.ie6-7 body {
-  overflow-y: auto;
-}
-
 .l-main-aux {
   background-color: #cccccc;
 }
@@ -683,29 +600,6 @@ body {
 }
 
 /* @end */
-/* @group Navigation block global
---------------------------------------------------------------------------- */
-.global-nav li {
-  list-style: none;
-  background: none;
-  margin: 0;
-  padding: 0;
-  display: inline;
-}
-.global-nav li a:hover, .global-nav li a:focus {
-  color: #333;
-}
-.global-nav li.active a {
-  color: #333;
-}
-
-.global-nav__inner {
-  padding: 0;
-  margin: 0;
-  clear: both;
-}
-
-/* @end */
 /* ============================================================================
 		Main
 ============================================================================= */
@@ -784,16 +678,18 @@ body {
   top: 0;
   left: 0;
   z-index: 3;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.modal__box {
+.modal__window {
   position: fixed;
-  top: 20%;
-  left: 30%;
+  top: 10%;
+  left: 50%;
   z-index: 4;
 }
 
-.modal__box__inner {
+.modal__window__inner {
   position: relative;
 }
 
@@ -813,14 +709,14 @@ body {
   background: rgba(0, 0, 0, 0.4);
 }
 
-.modal__box {
+.modal__window {
   width: 450px;
-  padding: 1em;
   background-color: #FFF;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  padding: 1em;
 }
-.ie7-8 .modal__box {
+.ie7-8 .modal__window {
   border: 1px solid #ddd;
 }
 
@@ -1042,52 +938,47 @@ body {
 /* ============================================================================
    @group Form support
 ============================================================================ */
-form {
+.form {
   border: none;
 }
-
-button,
-input,
-select,
-textarea {
+.form button,
+.form input,
+.form select,
+.form textarea {
   font: 1em/1.429em Arial, FreeSans, sans-serif;
   vertical-align: baseline;
 }
-
-label {
-  display: block;
+.form label {
   font-weight: normal;
 }
-
-input[type="button"], input[type="submit"], input[type="reset"], input[type="image"] {
+.form input[type="button"], .form input[type="submit"], .form input[type="reset"], .form input[type="image"] {
   cursor: default;
   -webkit-appearance: button;
 }
-input[type="checkbox"], input[type="radio"] {
+.form input[type="checkbox"], .form input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
-input[type="radio"] {
+.form input[type="radio"] {
   vertical-align: text-top;
 }
-input[type="checkbox"] {
+.form input[type="checkbox"] {
   vertical-align: baseline;
 }
-input[type="search"] {
+.form input[type="search"] {
   -webkit-appearance: none;
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-input[type="search"]::-webkit-search-decoration {
+.form input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-
-input[type="text"],
-input[type="password"],
-input[type="search"],
-select,
-textarea {
+.form input[type="text"],
+.form input[type="password"],
+.form input[type="search"],
+.form select,
+.form textarea {
   border: 1px solid;
   border-color: #777 #ccc #ccc;
   background: #fff;
@@ -1095,43 +986,39 @@ textarea {
   height: 1.4em;
   line-height: 1.4em;
 }
-input[type="text"]:hover,
-input[type="password"]:hover,
-input[type="search"]:hover,
-select:hover,
-textarea:hover {
+.form input[type="text"]:hover,
+.form input[type="password"]:hover,
+.form input[type="search"]:hover,
+.form select:hover,
+.form textarea:hover {
   border-color: #777;
 }
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="search"]:focus,
-select:focus,
-textarea:focus {
+.form input[type="text"]:focus,
+.form input[type="password"]:focus,
+.form input[type="search"]:focus,
+.form select:focus,
+.form textarea:focus {
   border-color: #0099ff;
   outline: none;
 }
-
-input[type="button"],
-input[type="submit"],
-input[type="image"],
-button {
+.form input[type="button"],
+.form input[type="submit"],
+.form input[type="image"],
+.form button {
   color: #efefef;
   background: #2d2d2d;
   border: 1px solid #2d2d2d;
-  *overflow: visible;
-  -webkit-appearance: button;
 }
-input[type="button"]:hover, input[type="button"]:focus,
-input[type="submit"]:hover,
-input[type="submit"]:focus,
-input[type="image"]:hover,
-input[type="image"]:focus,
-button:hover,
-button:focus {
+.form input[type="button"]:hover, .form input[type="button"]:focus,
+.form input[type="submit"]:hover,
+.form input[type="submit"]:focus,
+.form input[type="image"]:hover,
+.form input[type="image"]:focus,
+.form button:hover,
+.form button:focus {
   border-color: #0099ff;
 }
-
-textarea {
+.form textarea {
   overflow: auto;
   vertical-align: top;
   height: auto;
@@ -1140,17 +1027,14 @@ textarea {
   resize: vertical;
   min-height: 4em;
 }
-
-select[multiple="multiple"] {
+.form select[multiple="multiple"] {
   height: auto;
 }
-
-optgroup {
+.form optgroup {
   font-weight: normal;
   background: #ccc;
 }
-
-fieldset {
+.form fieldset {
   border: 1px solid #ccc;
   margin: 0 2px;
   margin-top: 1.286em;
@@ -1158,33 +1042,35 @@ fieldset {
   padding-bottom: 1.286em;
   margin-bottom: 0em;
 }
-
-legend {
+.form legend {
   border: 0;
   padding: 0;
 }
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+.form button::-moz-focus-inner,
+.form input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
-
-.ie6-7 button, .ie6-7 input, .ie6-7 select, .ie6-7 textarea {
+.form .ie6-7 button, .form .ie6-7 input, .form .ie6-7 select, .form .ie6-7 textarea {
   vertical-align: middle;
 }
-.ie6-7 button, .ie6-7 input {
+.form .ie6-7 button, .form .ie6-7 input {
   overflow: visible;
 }
-.ie6-7 input[type="checkbox"],
-.ie6-7 input[type="radio"] {
+.form .ie6-7 input[type="checkbox"],
+.form .ie6-7 input[type="radio"] {
   height: 13px;
   width: 13px;
 }
 
-/* @end */
-/* @group Form Support
-	-------------------------------------------------------------------------- */
+.form_horiz label {
+  display: inline;
+}
+
+.form_vert label {
+  display: block;
+}
+
 .form__row {
   padding: .4em 0;
 }
@@ -1192,6 +1078,59 @@ input::-moz-focus-inner {
 .form__item {
   float: left;
   padding: 0 .4em 0 0;
+}
+
+/* @end */
+/* ============================================================================
+   @group Table support
+============================================================================ */
+.table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-width: 0;
+  width: 100%;
+  empty-cells: hide;
+}
+.table caption {
+  font-size: 1.618em;
+  line-height: 1.589em;
+  margin-bottom: 0.795em;
+}
+.table td, .table th {
+  vertical-align: middle;
+  padding: 0 0.514em;
+  border: 1px solid #ccc;
+}
+thead .table td, thead .table th {
+  font-weight: bold;
+}
+.table tbody td[colspan] {
+  text-align: center;
+}
+.table tbody td[rowspan] {
+  vertical-align: middle;
+}
+.table tbody td[colspan="1"] {
+  text-align: left;
+}
+.table tbody td[rowspan="1"] {
+  vertical-align: top;
+}
+.table tbody td:empty {
+  border: none;
+}
+.table tbody tr:nth-of-type(odd) td {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.table tfoot {
+  text-align: center;
+  font-size: .9em;
+  font-style: italic;
+}
+
+.table_fixed {
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 /* @end */
